Fix transparency check for annotations

It wasn't actually checking for transparency due to typo, so no transparency
was working.

See: tests_private/pdf/sumatra/annotations_galore_II.pdf

Also fix crash dealing with invalid font in Resource

This was crashing in pdfi_check_Font() on
tests_private/comparefiles/Bug689450.pdf

Now we don't try to look things up in the font if it's not a dictionary...